# MotionBoardFirmware

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .lintstagedrc  Dockerfile  compile-and-flash.bash  package-lock.json  package.json
.github/workflows/: compile.yml
common/: Actuators.hpp  AdaptativeSpeedController.cpp  AdaptativeSpeedController.hpp  Control.cpp  Control.hpp  DataStreamer.hpp  Event.hpp  Goal.cpp  Goal.hpp  LocalMath.hpp  MotionPlanning.hpp  Motor.hpp  MotorControl.cpp  MotorControl.hpp  MotorControlLoop.cpp  MotorControlLoop.hpp  PID.cpp  PID.h  Peripherals.hpp  Quaternion.cpp  Quaternion.hpp  RobotPose.cpp  RobotPose.hpp  Shell.cpp  Shell.hpp  SpeedController.cpp  SpeedController.hpp  Strategy.cpp  Strategy.hpp  Switchers.hpp  bbpr.hpp  common.mk  main.cpp
common/HAL/: Board.hpp  Logging.hpp  Motor.cpp  Motor.hpp  Parameters.hpp  hal.mk
common/StateMachine/: Events.hpp  IdleState.hpp  StateMachine.hpp
common/Strategy/: Events.hpp  IdleState.hpp  Strategy.cpp  Strategy.hpp  strategy.mk
common/actions/: Action.hpp  MoveAction.hpp
firmware/: firmware.mk
firmware/libs/: libs.mk
firmware/src/: AvoidanceThread.cpp  AvoidanceThread.hpp  Board.hpp  ClusterBuffer.cpp  ClusterBuffer.hpp  ControlThread.cpp  ControlThread.hpp  DataStreamer.hpp  EmergencyWatcher.cpp  EmergencyWatcher.hpp  LidarThread.cpp  LidarThread.hpp  Logging.hpp  Memory.cpp  Memory.hpp  MotionBoard.hpp  Motor.cpp  hal.mk  (+13 more)
libs/: common_libs.mk
sim/: Makefile
test_robot/: Makefile
test_strategy/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_strategy
test_strategy/src/: Control.cpp  Motor.cpp  MotorControl.cpp  Parameters.hpp  Switchers.cpp  main.cpp
(+108 files in other folders)
